# mcrec

./: README.md  кек.txt
info/: base.aux  base.tex  introduction.tex  prog.tex
info/rfbr/: page1.tex
prog/: B.gro  CMakeLists.txt  data.mcr  eth.gro  global.h  initial.h  mcrec.cu  mcrec.h
prog/doc/: doc.aux  doc.tex
prog/initial/: cuPrintf.cu  data_from_device.cu  data_to_device.cu  device_prop.cu  free_arrays.cu  initial_flows.cu  rcut.cu  read_gro.cu  read_options.cu  read_top.cu  single_box.cu
prog/rect/: dbox_init.cu  double_box.cu  double_devtohost.cu  double_step.cu
prog/write/: log.cu  single_box_write.cu
report1/: appendix.tex  base.aux  base.bbl  base.blg  base.tex  base.toc  condclusion.tex  introduction.tex  lib.bib  lib.bib.bak  lib.bib.sav  prog.tex  prog_double.tex  theory.tex  title.tex  utf8gost71u.bst
report1/fig2/: Diagram1.dia  data
report1/report2/: prog.tex
